sinalcabo/force-app/main/default/objects/WorkType/fields/Codigo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Cliente__c</fullName>
    <description>Código do tipo de pedido no catálogo da NOS, por exemplo OTI-RA2. É a chave que liga a ordem lida ao tipo de trabalho.</description>
    <externalId>true</externalId>
    <inlineHelpText>Escreve o código exactamente como aparece no catálogo de ordens do contrato. Sem ele, as ordens desse tipo entram sem tipo de trabalho.</inlineHelpText>
    <label>Código da OT na NOS</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>