sinalcabo/force-app/main/default/objects/WorkType/fields/Dentro_Avenca__c.field-meta.xml
<CustomField>
    <fullName>Dentro_Avenca__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando o trabalho deste tipo está coberto pela avença e não é facturado à parte.</description>
    <inlineHelpText>Vem da coluna Dentro da avença do catálogo de ordens do contrato. É o que decide o estado de facturação inicial das ordens.</inlineHelpText>
    <label>Dentro da avença</label>
    <type>Checkbox</type>
</CustomField>