sinalcabo/force-app/main/default/objects/WorkType/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <description>Família a que o tipo de trabalho pertence. Agrupa o catálogo para listas, relatórios e regras de facturação.</description>
    <inlineHelpText>Uma família por tipo. É esta que aparece na ordem, no campo Família da ordem.</inlineHelpText>
    <label>Família</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avaria</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Obra</fullName>
            </value>
            <value>
                <fullName>Policiamento</fullName>
            </value>
            <value>
                <fullName>Cadastro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>