sinalcabo/force-app/main/default/objects/WorkType/fields/Patamar_Penalidade_Dias__c.field-meta.xml
<CustomField>
    <fullName>Patamar_Penalidade_Dias__c</fullName>
    <description>A partir de quantos dias de atraso a penalidade deixa de ser a unitária e passa a um euro por dia, tal como diz a nota do catálogo da NOS.</description>
    <inlineHelpText>São 60 dias em todo o catálogo: do 61.º dia em diante a penalidade é de 1 euro por dia.</inlineHelpText>
    <label>Patamar da penalidade (dias)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>