sinalcabo/force-app/main/default/objects/WorkType/fields/Penalidade_Unitaria__c.field-meta.xml
<CustomField>
    <fullName>Penalidade_Unitaria__c</fullName>
    <description>Valor em euros que o operador desconta por cada unidade de aferição de atraso, tal como está no catálogo da NOS.</description>
    <inlineHelpText>Do catálogo da NOS: 5 euros na Tabela 1 e 10 euros na Tabela 9. Vazio nos códigos que o catálogo não penaliza.</inlineHelpText>
    <label>Penalidade unitária</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>