sinalcabo/force-app/main/default/objects/WorkType/fields/TE_Minutos__c.field-meta.xml
<CustomField>
    <fullName>TE_Minutos__c</fullName>
    <description>Prazo de execução deste tipo de ordem, em minutos, tal como está no catálogo da NOS. É o alvo do milestone TE, da atribuição ao fecho do técnico.</description>
    <inlineHelpText>Prazo de intervenção do catálogo da NOS, em minutos. Converte antes de escrever: 3 horas são 180, 1 dia são 1440, 10 dias são 14400.</inlineHelpText>
    <label>TE (minutos)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>