sinalcabo/force-app/main/default/objects/WorkType/fields/TEC_Minutos__c.field-meta.xml
<CustomField>
    <fullName>TEC_Minutos__c</fullName>
    <description>Prazo de entrega do cadastro deste tipo de ordem, em minutos, tal como está no catálogo da NOS. É o alvo do milestone TEC, que arranca no fecho do técnico.</description>
    <inlineHelpText>Prazo do cadastro do catálogo da NOS, em minutos. Converte antes de escrever: 7 dias são 10080.</inlineHelpText>
    <label>TEC (minutos)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>