sinalcabo/force-app/main/default/objects/WorkType/fields/Unidade_Afericao_TE_Minutos__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Afericao_TE_Minutos__c</fullName>
    <description>Tamanho da unidade em que o atraso do prazo de execução é medido e cobrado, em minutos, tal como está no catálogo da NOS.</description>
    <inlineHelpText>Do catálogo da NOS: 30 minutos, 60 minutos ou 1 dia (1440). Nos prazos em dias úteis o dia útil vale também 1440, e a diferença está no horário do processo.</inlineHelpText>
    <label>Unidade de aferição do TE (minutos)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>