sinalcabo/force-app/main/default/objects/WorkType/fields/Unidade_Afericao_TEC_Minutos__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Afericao_TEC_Minutos__c</fullName>
    <description>Tamanho da unidade em que o atraso do prazo do cadastro é medido e cobrado, em minutos, tal como está no catálogo da NOS.</description>
    <inlineHelpText>Do catálogo da NOS é sempre 1 dia (1440), de calendário na Tabela 1 e útil na Tabela 9.</inlineHelpText>
    <label>Unidade de aferição do TEC (minutos)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>