sinalcabo/force-app/main/default/objects/WorkType/listViews/Sem_codigo_NOS.listView-meta.xml
<ListView>
    <fullName>Sem_codigo_NOS</fullName>
    <columns>Name</columns>
    <columns>Codigo_Cliente__c</columns>
    <columns>Familia__c</columns>
    <columns>Dentro_Avenca__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codigo_Cliente__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sem código NOS</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>